# sweet-wasm

./: CLAUDE.md  README.md  REVIEW.md  TODO.md
wasm-lib/: Cargo.toml
wasm-lib/src/: image.rs  lib.rs  video.rs
wasm-lib/tests/: web.rs
web/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx  vite-env.d.ts
web/src/components/: BlurDemo.tsx  ImageEffects.tsx  VideoEffects.tsx  WasmDemo.tsx
web/src/hooks/: useWasm.ts
web/src/store/: useWasmStore.ts
web/src/styles/: global.scss  variables.scss
web/src/workers/: WasmBridge.ts  wasm.worker.ts
